--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -212,6 +212,7 @@
     font-size: 2rem;
     margin: 10px;
     padding: 10px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.76);
   }
 
   .contact-container {
@@ -235,6 +236,7 @@
       font-weight: 800;
       color: $font-white;
       margin: 10px;
+      text-shadow: none;
     }
 
     p {
