--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -293,6 +293,7 @@ header nav ul li a:hover {
   font-size: 2rem;
   margin: 10px;
   padding: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.76);
 }
 .contact .contact-container {
   display: flex;
@@ -315,6 +316,7 @@ header nav ul li a:hover {
   font-weight: 800;
   color: #FAFBFB;
   margin: 10px;
+  text-shadow: none;
 }
 .contact .contact-container .description p {
   font-size: 0.9rem;
@@ -680,6 +682,10 @@ nav ul li {
   .contact .contact-wrapper .contact-info h4 {
     font-size: 2rem;
   }
+  footer .footer-content {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 @media all and (min-width: 768px) and (max-width: 1023px) {
   .hero .content {
@@ -711,23 +717,32 @@ nav ul li {
   .contact .contact-wrapper .contact-info h4 {
     font-size: 2rem;
   }
+  footer .footer-content {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
-.hero .content {
-  padding: 100px;
-}
-.hero .content h1 {
-  font-size: 3rem;
-  margin: 10px;
-}
-.hero .content h2 {
-  font-size: 1.5rem;
-  margin: 20px;
-}
-
-.clientes {
-  height: max-content;
-  align-items: center;
-}
-.clientes .clientes-content .icons {
-  width: 70%;
+@media all and (min-width: 1025px) and (max-width: 2560px) {
+  .hero .content {
+    padding: 100px;
+  }
+  .hero .content h1 {
+    font-size: 3rem;
+    margin: 10px;
+  }
+  .hero .content h2 {
+    font-size: 1.5rem;
+    margin: 20px;
+  }
+  .clientes {
+    height: max-content;
+    align-items: center;
+  }
+  .clientes .clientes-content .icons {
+    width: 70%;
+  }
+  footer .footer-content {
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
