--- a/scss/base/_media-query.scss
+++ b/scss/base/_media-query.scss
@@ -81,7 +81,7 @@ nav {
 }
 
 @media all and (min-width: 320px) and (max-width: 425px) {
-.hero .content {
+  .hero .content {
     h1 {
       margin-bottom: 10px;
     }
@@ -94,32 +94,38 @@ nav {
   .clientes {
     height: max-content;
     padding: 0;
+
     .clientes-content {
       h2 {
         font-size: 1.8rem;
         margin: 0 25px;
         padding: 0;
       }
+
       h3 {
         margin: 45px 25px;
         padding: 0;
       }
+
       p {
         margin: 15px;
         padding: 0;
       }
     }
   }
+
   .contact {
     height: max-content;
     display: flex;
     align-items: center;
-        .contact-container{
+
+    .contact-container {
       align-items: center;
       flex-direction: column;
-    h2{
-      margin-bottom: 25px;
-    }
+
+      h2 {
+        margin-bottom: 25px;
+      }
     }
 
     .contacto {
@@ -163,33 +169,42 @@ nav {
     display: flex;
     align-items: center;
 
-    .contact-container{
+    .contact-container {
       align-items: center;
       flex-direction: column;
 
     }
-    .description{
+
+    .description {
       margin: 0;
       padding: 0;
-      }
+    }
 
-      .contacto {
-        width: max-content;
-      }
+    .contacto {
+      width: max-content;
+    }
 
-      .contact-form {
-        width: 100%;
-      }
-    
+    .contact-form {
+      width: 100%;
+    }
 
-      .contact-wrapper .contact-info {
-        width: 100%;
-        h4 {
-          font-size: 2rem;
-        }
+
+    .contact-wrapper .contact-info {
+      width: 100%;
+
+      h4 {
+        font-size: 2rem;
       }
     }
   }
+
+  footer {
+    .footer-content {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+}
 
 
 @media all and (min-width: 768px) and (max-width: 1023px) {
@@ -212,13 +227,16 @@ nav {
 
     .clientes-content {
       align-items: center;
+
       .icons {
         width: 80%;
       }
     }
   }
+
   .contact {
     height: max-content;
+
     .contact-conteiner {
       align-items: center;
     }
@@ -227,31 +245,45 @@ nav {
       font-size: 2rem;
     }
   }
+    footer {
+    .footer-content {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
 }
 
-@media all and (min-width: 1025px) and (max-width: 1440px){
+@media all and (min-width: 1025px) and (max-width: 2560px) {
 
-}  .hero .content {
-    padding: 100px;
+.hero .content {
+  padding: 100px;
 
-    h1 {
-      font-size: 3rem;
-      margin: 10px;
-    }
+  h1 {
+    font-size: 3rem;
+    margin: 10px;
+  }
 
-    h2 {
-      font-size: 1.5rem;
-      margin: 20px;
+  h2 {
+    font-size: 1.5rem;
+    margin: 20px;
+  }
+}
+
+.clientes {
+  height: max-content;
+  align-items: center;
+
+  .clientes-content {
+    .icons {
+      width: 70%;
     }
   }
 
-  .clientes {
-    height: max-content;
-    align-items: center;
-
-    .clientes-content {
-      .icons {
-        width: 70%;
-      }
+}
+    footer {
+    .footer-content {
+      flex-direction: row;
+      justify-content: space-around;
     }
   }
+}
