--- a/scss/base/_media-query.scss
+++ b/scss/base/_media-query.scss
@@ -247,13 +247,14 @@ nav {
   }
     footer {
     .footer-content {
+      margin: 0 30px;
       flex-direction: row;
       justify-content: space-between;
     }
   }
 }
 
-@media all and (min-width: 1025px) and (max-width: 2560px) {
+@media all and (min-width: 1024px) and (max-width: 2560px) {
 
 .hero .content {
   padding: 100px;
@@ -282,8 +283,9 @@ nav {
 }
     footer {
     .footer-content {
+            margin: 0 60px;
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: space-between;
     }
   }
 }
