--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -736,11 +736,23 @@ nav ul li {
     margin: 20px;
   }
   .clientes {
-    height: max-content;
+    height: 90vh;
     align-items: center;
   }
   .clientes .clientes-content .icons {
     width: 70%;
+  }
+  .contact {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+  }
+  .contact h2 {
+    margin: 30px;
+  }
+  .contact .contact-container {
+    max-width: 1200px;
+    margin: 0 auto;
   }
   footer .footer-content {
     margin: 0 60px;
