--- a/scss/base/_media-query.scss
+++ b/scss/base/_media-query.scss
@@ -245,7 +245,8 @@ nav {
       font-size: 2rem;
     }
   }
-    footer {
+
+  footer {
     .footer-content {
       margin: 0 30px;
       flex-direction: row;
@@ -256,34 +257,46 @@ nav {
 
 @media all and (min-width: 1024px) and (max-width: 2560px) {
 
-.hero .content {
-  padding: 100px;
+  .hero .content {
+    padding: 100px;
 
-  h1 {
-    font-size: 3rem;
-    margin: 10px;
-  }
+    h1 {
+      font-size: 3rem;
+      margin: 10px;
+    }
 
-  h2 {
-    font-size: 1.5rem;
-    margin: 20px;
-  }
-}
-
-.clientes {
-  height: max-content;
-  align-items: center;
-
-  .clientes-content {
-    .icons {
-      width: 70%;
+    h2 {
+      font-size: 1.5rem;
+      margin: 20px;
     }
   }
 
-}
-    footer {
+  .clientes {
+    height: 90vh;
+    align-items: center;
+
+    .clientes-content {
+      .icons {
+        width: 70%;
+      }
+    }
+  }
+
+  .contact {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    h2 {
+      margin: 30px;
+    }
+    .contact-container {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+  }
+  footer {
     .footer-content {
-            margin: 0 60px;
+      margin: 0 60px;
       flex-direction: row;
       justify-content: space-between;
     }
